merge view